Set num_workers based on available #cores in example notebooks

--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -341,8 +341,8 @@
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        ArrayParams(array=x, fields=['features']),\n",
     "        ArrayParams(array=y, fields=['features']),\n",
-    "        num_workers=2        \n",
-    "    )    \n",
+    "        num_workers=2 if os.cpu_count() > 2 else 0,\n",
+    "    )\n",
     "    tiledb_dataset = tiledb_dataset.batch(64).shuffle(128)\n",
     "    model.fit(tiledb_dataset, epochs=5)"
    ]
