--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -353,7 +353,8 @@
     "ctx = tiledb.Ctx({'sm.memory_budget': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), shuffle_buffer_size=128, batch_size=64, num_workers=2\n",
+    "        ArrayParams(x), ArrayParams(y), shuffle_buffer_size=128, batch_size=64,\n",
+    "        num_workers=2 if os.cpu_count() > 2 else 0\n",
     "    )\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
