Remove explicit paths

--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -53,7 +53,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x15dae6650>"
+      "text/plain": [
+       "<torch._C.Generator at 0x15dae6650>"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -104,12 +106,14 @@
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/9912422 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1834a028d80340888143ba2c4d99a1b0",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1834a028d80340888143ba2c4d99a1b0"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/9912422 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -126,12 +130,14 @@
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/28881 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55ca1ec83c0a4526ab2f201e1615c490",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "55ca1ec83c0a4526ab2f201e1615c490"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/28881 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -148,12 +154,14 @@
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/1648877 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2284fcddf2b243ad8989c7326457b9ed",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "2284fcddf2b243ad8989c7326457b9ed"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1648877 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -170,12 +178,14 @@
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/4542 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86116abe57bb42c09ed7de5fbd982b5e",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "86116abe57bb42c09ed7de5fbd982b5e"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4542 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -914,7 +924,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'../data/tiledb-pytorch-mnist/pytorch-mnist-2'"
+      "text/plain": [
+       "'../data/tiledb-pytorch-mnist/pytorch-mnist-2'"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -937,22 +949,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file:///Users/konstantinostsitsimpikos/tileroot/TileDB-ML/examples/data/tiledb-pytorch-mnist/pytorch-mnist-1 array\n",
-      "file:///Users/konstantinostsitsimpikos/tileroot/TileDB-ML/examples/data/tiledb-pytorch-mnist/pytorch-mnist-2 array\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tiledb.ls(group, lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
@@ -974,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
