--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -133,8 +133,8 @@
      "text": [
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 77.93%\n",
-      "Test score with L1 penalty: 0.8298\n"
+      "Sparsity with L1 penalty: 81.12%\n",
+      "Test score with L1 penalty: 0.8317\n"
      ]
     }
    ],
@@ -209,19 +209,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../data/sklearn-mnist-1/__fragment_meta',\n",
-      " '../data/sklearn-mnist-1/__meta',\n",
-      " '../data/sklearn-mnist-1/__fragments',\n",
+      "['../data/sklearn-mnist-1/__meta',\n",
+      " '../data/sklearn-mnist-1/__fragment_meta',\n",
       " '../data/sklearn-mnist-1/__commits',\n",
-      " '../data/sklearn-mnist-1/__schema']\n",
+      " '../data/sklearn-mnist-1/__schema',\n",
+      " '../data/sklearn-mnist-1/__fragments']\n",
       "\n",
-      "Key: Sparsity_with_L1_penalty, Value: 77.93367346938776\n",
+      "Key: Sparsity_with_L1_penalty, Value: 81.12244897959184\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
-      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.0.2\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.1.3\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
-      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.13\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
-      "Key: score, Value: 0.8298\n"
+      "Key: model_size, Value: 63531\n",
+      "Key: score, Value: 0.8317\n"
      ]
     }
    ],
@@ -261,14 +262,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key: Sparsity_with_L1_penalty, Value: 77.93367346938776\n",
+      "Key: Sparsity_with_L1_penalty, Value: 81.12244897959184\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
-      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.0.2\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.1.3\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
-      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.13\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: model_size, Value: 63531\n",
       "Key: new_meta, Value: [\"Any kind of info\"]\n",
-      "Key: score, Value: 0.8298\n"
+      "Key: score, Value: 0.8317\n"
      ]
     }
    ],
@@ -307,32 +309,32 @@
      "output_type": "stream",
      "text": [
       "Model score...\n",
-      "Sparsity with L1 penalty: 77.93%\n",
-      "Test score with L1 penalty: 0.8298\n",
+      "Sparsity with L1 penalty: 81.12%\n",
+      "Test score with L1 penalty: 0.8317\n",
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 44.07%\n",
-      "Test score with L1 penalty: 0.7194\n",
+      "Sparsity with L1 penalty: 45.46%\n",
+      "Test score with L1 penalty: 0.7301\n",
       "\n",
-      "['../data/sklearn-mnist-1/__fragment_meta',\n",
-      " '../data/sklearn-mnist-1/__meta',\n",
-      " '../data/sklearn-mnist-1/__fragments',\n",
+      "['../data/sklearn-mnist-1/__meta',\n",
+      " '../data/sklearn-mnist-1/__fragment_meta',\n",
       " '../data/sklearn-mnist-1/__commits',\n",
-      " '../data/sklearn-mnist-1/__schema']\n",
+      " '../data/sklearn-mnist-1/__schema',\n",
+      " '../data/sklearn-mnist-1/__fragments']\n",
       "\n",
       "====== FRAGMENTS  INFO ======\n",
       "array uri: ../data/sklearn-mnist-1\n",
       "number of fragments: 2\n",
       "\n",
       "===== FRAGMENT NUMBER 0 =====\n",
-      "timestamp range: (1664858394611, 1664858394611)\n",
+      "timestamp range: (1670425614775, 1670425614775)\n",
       "number of unconsolidated metadata: 2\n",
-      "version: 15\n",
+      "version: 16\n",
       "\n",
       "===== FRAGMENT NUMBER 1 =====\n",
-      "timestamp range: (1664858399506, 1664858399506)\n",
+      "timestamp range: (1670425618384, 1670425618384)\n",
       "number of unconsolidated metadata: 2\n",
-      "version: 15\n"
+      "version: 16\n"
      ]
     }
    ],
@@ -416,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "Fit...\n",
-      "Test score: 0.7755\n"
+      "Test score: 0.7654\n"
      ]
     }
    ],
@@ -459,9 +461,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'../data/tiledb-sklearn-mnist/sklearn-mnist-2'"
-      ]
+      "text/plain": "'../data/tiledb-sklearn-mnist/sklearn-mnist-2'"
      },
      "execution_count": 10,
      "metadata": {},
@@ -495,8 +495,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file:///home/gsk/projects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-1 array\n",
-      "file:///home/gsk/projects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-2 array\n"
+      "file:///Users/george/PycharmProjects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-1 array\n",
+      "file:///Users/george/PycharmProjects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-2 array\n"
      ]
     }
    ],
