update pytorch model example

--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -53,7 +53,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x1218c0b70>"
+      "text/plain": "<torch._C.Generator at 0x1193eb430>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -132,7 +132,20 @@
      "text": [
       "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
       "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "15.9%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
      ]
     },
@@ -277,14 +290,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-07 17:00:23.979857: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -388,13 +393,21 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:410: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "uri = os.path.join(data_home, 'pytorch-mnist-1')\n",
     "tiledb_model_1 = PyTorchTileDBModel(uri=uri, model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_1.save(update=False,\n",
-    "                    meta={'epochs': epochs,\n",
+    "tiledb_model_1.save(meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses},\n",
     "                    summary_writer=writer)"
    ]
@@ -438,9 +451,10 @@
       ")\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: TILEDB_ML_MODEL_VERSION, Value: \n",
       "Key: epochs, Value: 1\n",
-      "Key: model_state_dict_size, Value: 90053\n",
-      "Key: optimizer_state_dict_size, Value: 90064\n",
+      "Key: model_size, Value: 90053\n",
+      "Key: optimizer_size, Value: 90064\n",
       "Key: tensorboard_size, Value: 22674\n",
       "Key: train_loss, Value: (2.358812093734741, 2.285137891769409, 2.3066349029541016, 2.2708795070648193, 2.2367401123046875, 2.24334716796875, 2.1832549571990967, 2.1485116481781006, 2.1049115657806396, 2.0044069290161133, 1.8622523546218872, 1.8843708038330078, 1.7973158359527588, 1.6879109144210815, 1.508046269416809, 1.764279842376709, 1.4700727462768555, 1.3514467477798462, 1.2905819416046143, 1.0177571773529053, 1.042162299156189, 1.0987662076950073, 1.2285516262054443, 1.1495932340621948, 0.8452475070953369, 0.9741130471229553, 0.8569056987762451, 0.9234588146209717, 1.0218565464019775, 0.8069543242454529, 0.8789511919021606, 0.8185049891471863, 0.8055434226989746, 0.8231522440910339, 0.8543609976768494, 0.7746452689170837, 0.718348503112793, 0.5433375239372253, 0.7593768239021301, 0.65492182970047, 0.6999298930168152, 0.8053513765335083, 0.790733814239502, 0.7599329948425293, 0.540409505367279, 0.6412327885627747, 0.6593738198280334)\n"
      ]
@@ -492,10 +506,11 @@
       ")\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: TILEDB_ML_MODEL_VERSION, Value: \n",
       "Key: epochs, Value: 1\n",
-      "Key: model_state_dict_size, Value: 90053\n",
+      "Key: model_size, Value: 90053\n",
       "Key: new_meta, Value: [\"Any kind of info\"]\n",
-      "Key: optimizer_state_dict_size, Value: 90064\n",
+      "Key: optimizer_size, Value: 90064\n",
       "Key: tensorboard_size, Value: 22674\n",
       "Key: train_loss, Value: (2.358812093734741, 2.285137891769409, 2.3066349029541016, 2.2708795070648193, 2.2367401123046875, 2.24334716796875, 2.1832549571990967, 2.1485116481781006, 2.1049115657806396, 2.0044069290161133, 1.8622523546218872, 1.8843708038330078, 1.7973158359527588, 1.6879109144210815, 1.508046269416809, 1.764279842376709, 1.4700727462768555, 1.3514467477798462, 1.2905819416046143, 1.0177571773529053, 1.042162299156189, 1.0987662076950073, 1.2285516262054443, 1.1495932340621948, 0.8452475070953369, 0.9741130471229553, 0.8569056987762451, 0.9234588146209717, 1.0218565464019775, 0.8069543242454529, 0.8789511919021606, 0.8185049891471863, 0.8055434226989746, 0.8231522440910339, 0.8543609976768494, 0.7746452689170837, 0.718348503112793, 0.5433375239372253, 0.7593768239021301, 0.65492182970047, 0.6999298930168152, 0.8053513765335083, 0.790733814239502, 0.7599329948425293, 0.540409505367279, 0.6412327885627747, 0.6593738198280334)\n"
      ]
@@ -669,14 +684,14 @@
       "number of fragments: 2\n",
       "\n",
       "===== FRAGMENT NUMBER 0 =====\n",
-      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/data/pytorch-mnist-1/__fragments/__1670425246498_1670425246498_5ca20757611a43009e22606647ee9b22_16\n",
-      "timestamp range: (1670425246498, 1670425246498)\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/data/pytorch-mnist-1/__fragments/__1675169603990_1675169603990_aae704a1499649fe8ad3fd0e61d8f9b9_16\n",
+      "timestamp range: (1675169603990, 1675169603990)\n",
       "number of unconsolidated metadata: 2\n",
       "version: 16\n",
       "\n",
       "===== FRAGMENT NUMBER 1 =====\n",
-      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/data/pytorch-mnist-1/__fragments/__1670425278236_1670425278236_8e60255a3abe4173b21458369995c20c_16\n",
-      "timestamp range: (1670425278236, 1670425278236)\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/data/pytorch-mnist-1/__fragments/__1675169635431_1675169635431_e064ef7a982e45a1be7bb678d1949b97_16\n",
+      "timestamp range: (1675169635431, 1675169635431)\n",
       "number of unconsolidated metadata: 2\n",
       "version: 16\n"
      ]
@@ -692,8 +707,7 @@
     "\n",
     "# and update\n",
     "tiledb_model_1 = PyTorchTileDBModel(uri=uri, model=network, optimizer=optimizer)\n",
-    "tiledb_model_1.save(update=True, \n",
-    "                    meta={'epochs': epochs,\n",
+    "tiledb_model_1.save(meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})\n",
     "\n",
     "# Check array directory\n",
@@ -845,8 +859,7 @@
     "uri2 = os.path.join(data_home, 'pytorch-mnist-2')\n",
     "tiledb_model_2 = PyTorchTileDBModel(uri=uri2, model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_2.save(update=False, \n",
-    "                    meta={'epochs': epochs,\n",
+    "tiledb_model_2.save(meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
    ]
   },
