--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -133,8 +133,8 @@
      "text": [
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 81.12%\n",
-      "Test score with L1 penalty: 0.8317\n"
+      "Sparsity with L1 penalty: 80.33%\n",
+      "Test score with L1 penalty: 0.8401\n"
      ]
     }
    ],
@@ -178,7 +178,16 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:410: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "uri = os.path.join(data_home, 'sklearn-mnist-1')\n",
     "tiledb_model_1 = SklearnTileDBModel(uri=uri, model=clf)\n",
@@ -215,14 +224,15 @@
       " '../data/sklearn-mnist-1/__schema',\n",
       " '../data/sklearn-mnist-1/__fragments']\n",
       "\n",
-      "Key: Sparsity_with_L1_penalty, Value: 81.12244897959184\n",
+      "Key: Sparsity_with_L1_penalty, Value: 80.33163265306122\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.1.3\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: TILEDB_ML_MODEL_VERSION, Value: \n",
       "Key: model_size, Value: 63531\n",
-      "Key: score, Value: 0.8317\n"
+      "Key: score, Value: 0.8401\n"
      ]
     }
    ],
@@ -262,15 +272,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key: Sparsity_with_L1_penalty, Value: 81.12244897959184\n",
+      "Key: Sparsity_with_L1_penalty, Value: 80.33163265306122\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.1.3\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.9.9\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: TILEDB_ML_MODEL_VERSION, Value: \n",
       "Key: model_size, Value: 63531\n",
       "Key: new_meta, Value: [\"Any kind of info\"]\n",
-      "Key: score, Value: 0.8317\n"
+      "Key: score, Value: 0.8401\n"
      ]
     }
    ],
@@ -309,12 +320,12 @@
      "output_type": "stream",
      "text": [
       "Model score...\n",
-      "Sparsity with L1 penalty: 81.12%\n",
-      "Test score with L1 penalty: 0.8317\n",
+      "Sparsity with L1 penalty: 80.33%\n",
+      "Test score with L1 penalty: 0.8401\n",
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 45.46%\n",
-      "Test score with L1 penalty: 0.7301\n",
+      "Sparsity with L1 penalty: 44.13%\n",
+      "Test score with L1 penalty: 0.7286\n",
       "\n",
       "['../data/sklearn-mnist-1/__meta',\n",
       " '../data/sklearn-mnist-1/__fragment_meta',\n",
@@ -327,12 +338,12 @@
       "number of fragments: 2\n",
       "\n",
       "===== FRAGMENT NUMBER 0 =====\n",
-      "timestamp range: (1670425614775, 1670425614775)\n",
+      "timestamp range: (1675169831049, 1675169831049)\n",
       "number of unconsolidated metadata: 2\n",
       "version: 16\n",
       "\n",
       "===== FRAGMENT NUMBER 1 =====\n",
-      "timestamp range: (1670425618384, 1670425618384)\n",
+      "timestamp range: (1675169834215, 1675169834215)\n",
       "number of unconsolidated metadata: 2\n",
       "version: 16\n"
      ]
@@ -363,8 +374,7 @@
     "\n",
     "\n",
     "tiledb_model_1 = SklearnTileDBModel(uri=uri, model=loaded_clf)\n",
-    "tiledb_model_1.save(update=True,\n",
-    "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
+    "tiledb_model_1.save(meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})\n",
     "\n",
     "# Check array directory\n",
@@ -418,7 +428,7 @@
      "output_type": "stream",
      "text": [
       "Fit...\n",
-      "Test score: 0.7654\n"
+      "Test score: 0.7741\n"
      ]
     }
    ],
