--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -217,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:410: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
+      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:448: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -254,7 +254,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x12de28bb0>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x121b92610>"
      },
      "execution_count": 7,
      "metadata": {},
@@ -305,20 +305,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 2.299262\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.262452\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.162849\n",
-      "Train Epoch: 1 Batch: 300 Loss: 1.927302\n",
-      "Train Epoch: 1 Batch: 400 Loss: 1.646087\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.446454\n",
-      "Train Epoch: 2 Batch: 100 Loss: 1.314963\n",
-      "Train Epoch: 2 Batch: 200 Loss: 1.376722\n",
-      "Train Epoch: 2 Batch: 300 Loss: 1.400400\n",
-      "Train Epoch: 2 Batch: 400 Loss: 1.291488\n"
+      "Train Epoch: 1 Batch: 0 Loss: 2.308212\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.235510\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.102570\n",
+      "Train Epoch: 1 Batch: 300 Loss: 1.886168\n",
+      "Train Epoch: 1 Batch: 400 Loss: 1.325234\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.331296\n",
+      "Train Epoch: 2 Batch: 100 Loss: 1.034582\n",
+      "Train Epoch: 2 Batch: 200 Loss: 1.114316\n",
+      "Train Epoch: 2 Batch: 300 Loss: 0.709703\n",
+      "Train Epoch: 2 Batch: 400 Loss: 0.704359\n"
      ]
     }
    ],
    "source": [
+    "import multiprocessing\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
@@ -349,11 +350,18 @@
     "    img = np.clip(img,0,1)\n",
     "    return img\n",
     "\n",
+    "multiprocessing.set_start_method('fork')\n",
     "\n",
     "ctx = tiledb.Ctx({'sm.memory_budget': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
+    "    # Because of this issue (https://github.com/pytorch/pytorch/issues/59451#issuecomment-854883855) we avoid using multiple workers on Jupyter.\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x, fn=do_random_noise), ArrayParams(y), batch_size=128,\n",
+    "        ArrayParams(x, fn=do_random_noise),\n",
+    "        ArrayParams(y),\n",
+    "        batch_size=128,\n",
+    "        num_workers=2,\n",
+    "        shuffle_buffer_size=256,\n",
+    "        persistent_workers=True\n",
     "    )\n",
     "\n",
     "    net = Net(shape=(28, 28))\n",
@@ -374,11 +382,18 @@
     "                print('Train Epoch: {} Batch: {} Loss: {:.6f}'.format(\n",
     "                epoch, batch_idx, loss.item()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
