PyTorch reader notebook update.

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -52,7 +52,110 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0.3%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-images-idx3-ubyte.gz to ../data/MNIST/raw\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+      "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "19.9%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data_home = os.path.join(os.path.pardir, \"data\")\n",
     "data = torchvision.datasets.MNIST(root=data_home, train=False, download=True)"
@@ -143,7 +246,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:448: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "data_dir = os.path.join(data_home, 'readers', 'pytorch', 'dense')\n",
     "os.makedirs(data_dir, exist_ok=True)\n",
@@ -212,14 +324,6 @@
       ")\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/george/PycharmProjects/TileDB-ML/.venv/lib/python3.9/site-packages/tiledb/ctx.py:448: UserWarning: tiledb.default_ctx and scope_ctx will not function correctly due to bug in IPython contextvar support.  You must supply a Ctx object to each function for custom configuration options. Please consider upgrading to ipykernel >= 6!Please see https://github.com/TileDB-Inc/TileDB-Py/issues/667 for more information.\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
@@ -254,7 +358,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x121b92610>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x123788ca0>"
      },
      "execution_count": 7,
      "metadata": {},
@@ -305,16 +409,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 2.308212\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.235510\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.102570\n",
-      "Train Epoch: 1 Batch: 300 Loss: 1.886168\n",
-      "Train Epoch: 1 Batch: 400 Loss: 1.325234\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.331296\n",
-      "Train Epoch: 2 Batch: 100 Loss: 1.034582\n",
-      "Train Epoch: 2 Batch: 200 Loss: 1.114316\n",
-      "Train Epoch: 2 Batch: 300 Loss: 0.709703\n",
-      "Train Epoch: 2 Batch: 400 Loss: 0.704359\n"
+      "Train Epoch: 1 Batch: 0 Loss: 2.304748\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.277155\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.203359\n",
+      "Train Epoch: 1 Batch: 300 Loss: 1.895098\n",
+      "Train Epoch: 1 Batch: 400 Loss: 1.497304\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.435658\n",
+      "Train Epoch: 2 Batch: 100 Loss: 1.305221\n",
+      "Train Epoch: 2 Batch: 200 Loss: 0.990590\n",
+      "Train Epoch: 2 Batch: 300 Loss: 1.103210\n",
+      "Train Epoch: 2 Batch: 400 Loss: 0.903957\n"
      ]
     }
    ],
@@ -350,8 +454,6 @@
     "    img = np.clip(img,0,1)\n",
     "    return img\n",
     "\n",
-    "multiprocessing.set_start_method('fork')\n",
-    "\n",
     "ctx = tiledb.Ctx({'sm.memory_budget': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    # Because of this issue (https://github.com/pytorch/pytorch/issues/59451#issuecomment-854883855) we avoid using multiple workers on Jupyter.\n",
@@ -359,9 +461,8 @@
     "        ArrayParams(x, fn=do_random_noise),\n",
     "        ArrayParams(y),\n",
     "        batch_size=128,\n",
-    "        num_workers=2,\n",
+    "        num_workers=0,\n",
     "        shuffle_buffer_size=256,\n",
-    "        persistent_workers=True\n",
     "    )\n",
     "\n",
     "    net = Net(shape=(28, 28))\n",
