--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -454,7 +454,7 @@
     "    img = np.clip(img,0,1)\n",
     "    return img\n",
     "\n",
-    "ctx = tiledb.Ctx({'sm.memory_budget': 1024**2})\n",
+    "ctx = tiledb.Ctx({'sm.mem.total_budget': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    # Because of this issue (https://github.com/pytorch/pytorch/issues/59451#issuecomment-854883855) we avoid using multiple workers on Jupyter.\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
