--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -336,7 +336,7 @@
     "\n",
     "model = create_model()\n",
     "\n",
-    "ctx = tiledb.Ctx({'sm.memory_budget': 1024**2})\n",
+    "ctx = tiledb.Ctx({'sm.mem.total_budget': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        ArrayParams(array=x, fields=['features']),\n",
